# witnet-polkadot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
pallet-witnet-oracle/: Cargo.toml  README.md
pallet-witnet-oracle/src/: lib.rs  mock.rs  tests.rs  traits.rs  types.rs
